[tdd-reference-algo] Show how to print java/jvm events using BPF trace